# autoclicker

./: .gitignore  Cargo.toml  README.md  icon.icns
src/: app.rs  gui.rs  main.rs  utils.rs
