[package]
name = "autoclicker"
description = "A simple autoclicker coded in Rust."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "1.1.3"
eframe = "0.21.3"
enigo = "0.1.2"
rdev = "0.5.2"
sanitizer = "0.1.6"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true

[package.metadata.bundle]
name = "Autoclicker"
identifier = "com.thomasalban.autoclicker"
icon = ["icon.icns"]